Removing app insights references

--- a/car/eventhubs-producer/src/main/resources/producer.config
+++ b/car/eventhubs-producer/src/main/resources/producer.config
@@ -2,3 +2,5 @@ bootstrap.servers={YOUR.EVENTHUBS.FQDN}:9093
 security.protocol=SASL_SSL
 sasl.mechanism=PLAIN
 sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="$ConnectionString" password="{YOUR.EVENTHUBS.CONNECTION.STRING}";
+appinsights.instrumentation.key=f3cb19e9-9820-44ec-8974-bd85e1d53ccf
+
